# Project-Nightingale

./: .coverage  .gitignore  CONTRIBUTING.md  IMPROVEMENTS.md  README.md  __init__.py  brainstorm_plan.md  coverage.xml  features_brainstorm.md  project_nightingale.db  project_nightingale.js  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/codeql/extensions/Project-Nightingale-python/: codeql-pack.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  main.yml  quality.yml
codeql-custom-queries-python/: advanced_queries.ql  codeql-pack.yml  custom_query.ql
docs/: GUI_FEATURES.md  GUI_FEATURES_UPDATED.md  README.md  README_UPDATED.md  README_backup.md
docs/db1/: sample_database.py  sample_database_updated.py
gui/: __init__.py  main_gui.py  main_gui_interactive.py  main_gui_interactive_updated.py  main_gui_interactive_v2.py  main_gui_interactive_v3.py  main_gui_interactive_v4.py  main_gui_interactive_v5.py  main_gui_updated.py  main_gui_with_ai.py  main_gui_with_ai_fixed.py  main_gui_with_ai_integration.py
locales/: en.json  es.json
reports/: test_summary_report.md
scripts/: __init__.py  ai_model.py  ai_model_updated.py  ai_utilities.py  ai_utilities_updated.py  config.py  exceptions.py  utilities.py
scripts/networking/: networking.py
src/: __init__.py  app.py  main.py  main_updated.py  main_updated_v2.py  main_updated_v5.py  main_updated_v51.py
tests/: __init__.py  test_ai.py  test_ai_updated.py  test_ai_updated_v2.py  test_ai_updated_v3.py  test_ai_updated_v4.py  test_ai_updated_v45.py  test_ai_updated_v57.py  test_ai_updated_v70.py  test_ai_utilities.py  test_api.py  test_config.py  test_exceptions.py  test_gui_integration.py  test_gui_integration_v2.py  test_gui_structure.py  test_integration.py  test_main.py  test_main_updated.py  test_main_updated_v2.py
